--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-  "name": "cycle/standalone",
+  "name": "cycle/console",
   "type": "library",
   "license": "MIT",
   "description": "Standalone build of Cycle ORM for quick integrations",
   "require": {
-    "symfony/console": "^4.3",
     "cycle/orm": "^1.1",
     "cycle/proxy-factory": "^1.0",
-    "cycle/annotated": "^1.0"
+    "cycle/annotated": "^1.0",
+    "spiral/console": "^1.2"
   },
   "autoload": {
     "psr-4": {
-      "Cycle\\Standalone\\": "src/"
+      "Cycle\\Console\\": "src/"
     }
   }
 }
