--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
   "description": "Standalone build of Cycle ORM for quick integrations",
   "require": {
     "cycle/orm": "^1.1",
-    "cycle/proxy-factory": "^1.0",
+    "cycle/proxy-factory": "^1.2",
     "cycle/annotated": "^2.0",
-    "spiral/console": "^1.2"
+    "spiral/console": "^1.3"
   },
   "autoload": {
     "psr-4": {
@@ -16,5 +16,8 @@
   },
   "bin": [
     "bin/cycle"
-  ]
+  ],
+  "require-dev": {
+    "spiral/code-style": "^1.0"
+  }
 }
