--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
   "description": "Standalone build of Cycle ORM for quick integrations",
   "require": {
     "cycle/orm": "^1.1",
-    "cycle/proxy-factory": "^1.2",
+    "cycle/proxy-factory": "^1.3",
     "cycle/annotated": "^2.0",
-    "spiral/console": "^1.3"
+    "spiral/console": "^v2.8"
   },
   "autoload": {
     "psr-4": {
